<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="134dp"
        android:layout_height="158dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo_text"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login1"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/futuhv"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login2"
                android:textSize="28sp"
                android:layout_marginRight="10dp"
                android:textColor="@color/start_color"
                android:fontFamily="@font/futuhv"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login3"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:fontFamily="@font/futuhv"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login4"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/futuhv"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_below="@id/linearLayout"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/futuhv"
        android:letterSpacing="0.3"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accinfo"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="24dp"
        android:textStyle="bold"
        android:layout_marginBottom="3dp"
        android:letterSpacing="0.2"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/textView6"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems="21"
            android:background="@drawable/edit"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/Email"
            android:paddingStart="18dp"
            android:paddingLeft="18dp"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="21"
            android:background="@drawable/edit"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/Password"
            android:paddingStart="18dp"
            android:paddingLeft="18dp"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_start"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_below="@id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/futuhv"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="@color/white"/>
</RelativeLayout>
